FIX: styles of aside column fixed on mobile

--- a/src/styles/components/_grid.scss
+++ b/src/styles/components/_grid.scss
@@ -82,7 +82,7 @@
         position: -webkit-sticky;
         position: sticky;
         top: 75px;
-        min-height: 294px;
+        min-height: 330px;
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
